merubah position background

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0.6)),
     url("background.webp");
   background-size: cover;
-  background-position: left center;
+  background-position: center;
 }
 
 .bar {
