--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0.6)),
     url("background.webp");
   background-size: cover;
-  background-position: center;
+  background-position: left center;
 }
 
 .bar {
@@ -149,5 +149,10 @@ body {
     width: 2px;
     height: 10%;
     border-radius: 10px;
+  }
+
+  .wrapper {
+    background-size: cover;
+    background-position: right center;
   }
 }
