--- a/style.css
+++ b/style.css
@@ -152,7 +152,9 @@ body {
   }
 
   .wrapper {
-    background-size: contain;
-    background-position: center;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0.6)),
+      url("background-mb.webp");
+    background-size: cover;
+    background-position: left center;
   }
 }
