--- a/style.css
+++ b/style.css
@@ -155,6 +155,6 @@ body {
     background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0.6)),
       url("background-mb.webp");
     background-size: cover;
-    background-position: left center;
+    background-position: center;
   }
 }
